[project]
name = "pyspark_examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Mariusz Majewski",email = "m.majewski108@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pyspark", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
